--- a/src/main/resources/templates/skills.html
+++ b/src/main/resources/templates/skills.html
@@ -11,7 +11,7 @@
     <title>Skill Snippets</title>
 </head>
 <body>
-    <nav>Home - <a href="skills">Skills</a></nav>
+    <nav><a href="/">Home</a> - Skills</nav>
     <div class="container-fluid">
         <h1 th:text="${title}"></h1>
     </div>
